# e3-cli-rs

./: .gitignore  Cargo.toml  README.md
.claude/skills/e3-assignments/: SKILL.md
.claude/skills/e3-calendar/: SKILL.md
.claude/skills/e3-config/: SKILL.md
.claude/skills/e3-content/: SKILL.md
.claude/skills/e3-courses/: SKILL.md
.claude/skills/e3-download/: SKILL.md
.claude/skills/e3-export/: SKILL.md
.claude/skills/e3-fetch/: SKILL.md
.claude/skills/e3-forum/: SKILL.md
.claude/skills/e3-grades/: SKILL.md
.claude/skills/e3-news/: SKILL.md
.claude/skills/e3-notifications/: SKILL.md
.claude/skills/e3-open/: SKILL.md
.claude/skills/e3-status/: SKILL.md
.claude/skills/e3-submission/: SKILL.md
.claude/skills/e3-sync/: SKILL.md
.claude/skills/e3-updates/: SKILL.md
.claude/skills/e3-upload/: SKILL.md
.github/workflows/: build.yml  release.yml
crates/e3-cli/: Cargo.toml
crates/e3-cli/src/: config.rs  main.rs  output.rs
crates/e3-cli/src/commands/: assignments.rs  auth.rs  calendar.rs  config.rs  content.rs  courses.rs  download.rs  export.rs  fetch.rs  forum.rs  grades.rs  mod.rs  news.rs  notifications.rs  open.rs  status.rs  updates.rs  upload.rs
crates/e3-core/: Cargo.toml
crates/e3-core/src/: assignments.rs  auth.rs  calendar.rs  client.rs  courses.rs  error.rs  files.rs  forums.rs  grades.rs  ics.rs  lib.rs  notifications.rs  tests.rs  types.rs
