[workspace]
members = ["crates/e3-core", "crates/e3-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/viecon/e3-cli-rs"

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
colored = "3"
indicatif = "0.17"
dirs = "6"
open = "5"
csv = "1"
rpassword = "7"
base64 = "0.22"
chrono-tz = "0.10"
