[package]
name = "e3-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "e3"
path = "src/main.rs"

[dependencies]
e3-core = { path = "../e3-core" }
clap = { workspace = true }
comfy-table = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
csv = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
reqwest = { workspace = true }
clap_complete = "4"
futures = "0.3"
